# base-converter

./: ChoosingFunctions  Prototype  README.md  Updated inputtingFunction  choosing.py  choosingFunction  converting.py  main.py  pyproject.toml  validating.py
old/: choosingFunction.py  choosingFunctions.py
src/bases/: base_names.py
src/cli/: prompt.py
src/core/: convert.py
src/utils/: validator.py
tests/: test_convert_base.py  test_prompt.py
