[tool.poetry]
name = "base-converter"
version = "1.0.0"
description = "A Python program to convert numbers between different bases."
authors = ["Your Name <you@example.com>"]
license = "CC0-1.0"
readme = "README.md"
packages = [{include = "base_converter"}]

[tool.poetry.dependencies]
python = "^3.11"
inquirer = "^3.1.3"
pylint = "^2.17.5"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
